pongo existencias en productos/plist_carrito y en el carrito. Arreglo de diseño en plist_carrito cuando hay descripciones muy grandes.
Manejo de fechas implementado (he debido bajar version de angular, no 
mola), el datepicker al editar factura sale en rojo, mirar bien
validaciones en cliente.

Cuando se crea la factura YA SI te lleva a las facturas del usuario
(pero no a esa factura en concreto, meditar que opcion es mejor).

Falta hacer bien:
- Factura (fechas, modal y diseño).
- Lineas (modales y diseño).
- Cambiar diseño de todos los plists (maestros/esclavos, etc.).
- Hacer maestro/esclavo de tipo usuario y tipo producto.
- Subir fotos.
- Generar pdf de la factura al comprar.
- Gestion de permisos de usuarios (admin, cliente, etc.).

--- a/src/main/webapp/js/app/producto/plist_carrito.html
+++ b/src/main/webapp/js/app/producto/plist_carrito.html
@@ -43,10 +43,11 @@
             <div class="producto" ng-repeat="producto in ajaxDataProductos">
                 <div><i class="fas fa-cookie-bite" style="font-size: 200px;"></i></div>
                 <div>{{producto.desc}}</div>
+                <div>Existencias: {{producto.existencias}}</div>
                 <div>Precio: {{producto.precio}}€</div>
                 <div>
                     <a class="btn comprar" ng-class="{'disabled': producto.existencias == 0}"  ng-click="add(producto.id)"  style="margin-left: 10px;" data-toggle="modal"
-                              data-target="#cadd-location-modal">
+                       data-target="#cadd-location-modal">
                         <i class="fas fa-cart-plus" > Comprar</i>
                     </a>
                 </div>                
