--- a/src/main/webapp/js/app/carrito/plist.html
+++ b/src/main/webapp/js/app/carrito/plist.html
@@ -17,6 +17,7 @@
                     <div id="itemImagen"><i class="fas fa-cookie-bite" style="font-size: 120px;"><!--aqui iria la foto {{item.obj_Producto.foto}}--></i></div>
                     <div id="itemDesc"><h3><a href="producto/view/{{item.obj_Producto.id}}">{{item.obj_Producto.desc}}</a></h3></div>
                     <div id="itemPrecio">Precio: {{item.obj_Producto.precio.toFixed(2)}}€</div>
+                    <div id="itemExis">Existencias: {{item.obj_Producto.existencias}}</div>
                     <div id="itemCant">Cantidad: {{item.cantidad}}</div>
                     <div id="itemAdd">
                         <a class="btn btn-success"  ng-click="carrito('add', item.obj_Producto.id, '1')">
