Hecho:  - Manejo de fechas (el datepicker me sale en rojo, mirar bien la     validacion de errores. Me ha obligado a bajar una version de angular,     buscar opciones que no me obliguen a eso o arreglar lo rojo).  - Si un maestro/esclavo tiene 0, que el 0 te lleve al create (solo     hecho en plist de usuario, si tiene 0 facturas, el 0 lleva a crear     una factura para ese usuario, falta hacerlo en los demas).  - En los modales, cuando hay un error, el enlace sigue siendo enlace y     te lleva a un view vacio, eso arreglado en factura/create, si hay     error, el enlace se esconde y solo se muestra mensaje de error.
Falta hacer:
 - Cuando se añade maximo de existencias de un producto al carrito, hacer
    algo.
 - Subir imagenes y mostrarlas.
 - Generar PDF de la factura a comprar.
 - Gestion de usuarios (admin, cliente, etc.).
 - Maestros/esclavos, num de usuarios que tiene un tipo, y num de
    productos que tiene un tipo.

--- a/src/main/webapp/js/app/factura/plist.html
+++ b/src/main/webapp/js/app/factura/plist.html
@@ -37,10 +37,8 @@
             </nav>
         </div>
         <div class="col-3">
-            <a  href="{{ob}}/create/"> 
-                <button type="button" class="btn btn-info btn-sm" style="width: 100px; height:30px;">
-                    <i class="fas fa-file-invoice"> Crear</i>
-                </button>
+            <a  href="{{ob}}/create/" class="btn btn-info btn-sm" style="width: 100px; padding:7px;"> 
+                <i class="fas fa-file-invoice"> Crear</i>
             </a>
             <button type="button" class="btn btn-danger btn-sm" style="width: auto; height:30px;" ng-click="resetOrder()">
                 <i class="fas fa-toilet-paper"> Reset</i>
@@ -92,12 +90,6 @@
                 </th> 
                 <th>
                     LINEAS
-                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id_usuario', 'asc')">
-                        <i class="fas fa-long-arrow-alt-up"></i>
-                    </button>
-                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id_usuario', 'desc')">
-                        <i class="fas fa-long-arrow-alt-down"></i>
-                    </button>
                 </th> 
                 <th>
                     Acciones                
