--- a/src/main/webapp/js/app/factura/create.html
+++ b/src/main/webapp/js/app/factura/create.html
@@ -22,7 +22,7 @@
                ng-class="{ 'is-invalid' : userForm.fecha.$invalid && !userForm.fecha.$pristine, 'is-valid': userForm.fecha.$valid && !userForm.fecha.$pristine}">
                 </md-datepicker>
                 <div ng-show="userForm.fecha.$invalid && !userForm.fecha.$pristine && !userForm.fecha.$error.pattern" class="alert alert-danger" role="alert">
-                    Fecha no válida
+                    Fecha no valida
                 </div>
             </div>
         </div>
@@ -46,7 +46,7 @@
 
         <div class="form-group row">
             <label for="obj_usuario" class="col-3 col-form-label">Usuario</label>
-            <div class="col-2">          
+            <div class="col-2" ng-show="!idUsuExist">          
                 <div class="input-group">
                     <input ng-model="ajaxDatoFactura.obj_Usuario.id"
                            ng-change="usuarioRefresh(this, true)"
@@ -56,7 +56,11 @@
                            type="text"
                            size="5"
                            ng-model-options="{debounce: 1000}"
-                           maxlength="5" ng-required="true"  class="form-control is-valid" ng-class="{ 'is-invalid' : userForm.obj_usuario.$invalid && !userForm.obj_usuario.$pristine }" />
+                           maxlength="5" ng-required="true"
+                           class="form-control is-valid" 
+                           ng-class="{ 'is-invalid' : userForm.obj_usuario.$invalid && !userForm.obj_usuario.$pristine }"
+                    />
+                    
                     <div class="input-group-prepend">
                         <span class="input-group-text fas fa-search"
                               data-toggle="modal"
@@ -67,9 +71,9 @@
             </div>
 
 
-            <div class="form-group " style="width: auto;" >
+            <div class="form-group " style="width: auto; margin-left: 15px;" ng-show="userForm.obj_usuario.$valid">
                 <a href="usuario/view/{{ajaxDatoFactura.obj_Usuario.id}}" class="input-group-text" ng-disabled="link">
-                    <span >Usuario: {{ajaxDatoFactura.obj_Usuario.nombre}} {{ajaxDatoFactura.obj_Usuario.ape1}}</span>
+                    Usuario: {{ajaxDatoFactura.obj_Usuario.nombre}} {{ajaxDatoFactura.obj_Usuario.ape1}}
                 </a>
             </div>
         </div>
