--- a/src/main/webapp/js/app/usuario/plist.html
+++ b/src/main/webapp/js/app/usuario/plist.html
@@ -133,7 +133,10 @@
                         <a href="tipousuario/view/{{fila.obj_tipoUsuario.id}}">{{fila.obj_tipoUsuario.desc}}</a>
                     </td>
                     <td>
-                        <a href="usuario/plistfactura/{{fila.id}}/10/1" class="btn" ng-class="{'disabled': fila.numFactura == 0}">
+                        <a href="usuario/plistfactura/{{fila.id}}/10/1" class="btn" ng-if="fila.numFactura >= 1">
+                            {{fila.numFactura}}
+                        </a>
+                        <a href="factura/create/{{fila.id}}" class="btn" ng-if="fila.numFactura == 0">
                             {{fila.numFactura}}
                         </a>
                     </td>
