--- a/src/main/webapp/js/app/usuario/plistfactura.html
+++ b/src/main/webapp/js/app/usuario/plistfactura.html
@@ -38,7 +38,7 @@
             </nav>
         </div>
         <div class="col-3">
-            <a  href="{{ob}}/create/" class="btn btn-info btn-sm" style="width: 100px; height:30px;"> 
+            <a  href="factura/create/{{ajaxDatosUsuarios.id}}" class="btn btn-info btn-sm" style="width: 100px; height:30px;"> 
                     <i class="fas fa-file-invoice"> Crear</i>
             </a>
             <button type="button" class="btn btn-danger btn-sm" style="width: auto; height:30px;" ng-click="resetOrder()">
