--- a/src/main/webapp/js/app/usuario/login.html
+++ b/src/main/webapp/js/app/usuario/login.html
@@ -30,7 +30,7 @@
     <div class="row justify-content-md-center">
         <div class="col-sm-8 col-md-5">            
             <div class="alert alert-danger" role="alert" ng-show="errorLogin">
-                Te has equivocado.
+                {{mensajeError}}
             </div>
 
         </div>
