--- a/src/main/webapp/js/app/factura/plistlinea.html
+++ b/src/main/webapp/js/app/factura/plistlinea.html
@@ -38,10 +38,8 @@
             </nav>
         </div>
         <div class="col-3">
-            <a  href="{{ob}}/create/"> 
-                <button type="button" class="btn btn-info btn-sm" style="width: 100px; height:30px;">
+            <a  href="linea/create/{{ajaxDatosFactura.id}}"  class="btn btn-info btn-sm" style="width: 100px; height:30px;"> 
                     <i class="fas fa-file-invoice"> Crear</i>
-                </button>
             </a>
             <button type="button" class="btn btn-danger btn-sm" style="width: auto; height:30px;" ng-click="resetOrder()">
                 <i class="fas fa-toilet-paper"> Reset</i>
