--- a/src/main/webapp/js/app/factura/edit.html
+++ b/src/main/webapp/js/app/factura/edit.html
@@ -72,7 +72,7 @@
             </div>
 
 
-            <div class="form-group " style="width: auto;" >
+            <div class="form-group " style="width: auto; margin-left: 15px;" ng-show="userForm.obj_usuario.$valid">
                 <a href="usuario/view/{{ajaxDatoFactura.obj_Usuario.id}}" class="input-group-text" ng-disabled="link">
                     <span >Usuario: {{ajaxDatoFactura.obj_Usuario.nombre}} {{ajaxDatoFactura.obj_Usuario.ape1}}</span>
                 </a>
