--- a/src/main/webapp/js/app/factura/remove.html
+++ b/src/main/webapp/js/app/factura/remove.html
@@ -2,7 +2,7 @@
 <main role="main" class="container" style="margin-bottom: 100px;">
     <div class="primeraParte"></div>
     <div class="row">
-        <div class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
+        <div class="col-md-12 ml-sm-auto col-lg-12" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2"><i class="fas fa-file-invoice"></i> Factura</h1>
                 <h3 style="text-align: center">Eliminar</h3>
