--- a/src/main/webapp/js/app/linea/create.html
+++ b/src/main/webapp/js/app/linea/create.html
@@ -7,7 +7,7 @@
         <div class="col-md-12 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2"><i class="fas fa-file-invoice"></i> Lineas de la factura {{idFac}}</h1>
-                <h3 style="text-align: center">Crear</h3>
+                <h3 style="text-align: center">Crear linea</h3>
                 <a href="javascript:window.history.back();" class="btn btn-success">Volver</a> 
             </div>     
         </div>
@@ -19,12 +19,12 @@
             <label for="cantidad" class="col-3 col-form-label">Cantidad</label>
             <div class="col-8">
                 <input type="text" class="form-control is-valid" ng-class="{ 'is-invalid' : userForm.cantidad.$invalid && !userForm.cantidad.$pristine }" id="cantidad" 
-                       name="cantidad" ng-model="cantidad" ng-required="true" ng-pattern="/^[0-9]+$/"/>
+                       name="cantidad" ng-model="cantidad" ng-required="true" ng-pattern="/^[[0-9]{0,9}$/"/>
                 <div ng-show="userForm.cantidad.$invalid && !userForm.cantidad.$pristine && !userForm.cantidad.$error.pattern" class="alert alert-danger" role="alert">
                     cantidad obligatorio
                 </div>
                 <div ng-show="userForm.cantidad.$error.pattern" class="alert alert-danger" role="alert">
-                    cantidad no valido
+                    cantidad no valida
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
             <label for="obj_producto" class="col-3 col-form-label"></label>
             <div class="col-8">
                 <div ng-show="!userForm.obj_producto.$valid && !userForm.obj_producto.$pristine" class="alert alert-danger" style="width: auto;" role="alert">
-                    El producto es incorrecto.
+                    {{msgError}}
                 </div>
             </div>
         </div>
