--- a/src/main/webapp/js/app/usuario/plistfactura.html
+++ b/src/main/webapp/js/app/usuario/plistfactura.html
@@ -1,7 +1,7 @@
 <header-component></header-component>
 <div class="container" style="margin-bottom: 100px;">
     <div class="row">
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
+        <main role="main" class="col-md-12 ml-sm-auto col-lg-12" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2"><i class="fas fa-file-invoice"></i> Facturas del usuario 
                     <a href="{{ob}}/view/{{ajaxDatosUsuarios.id}}">{{ajaxDatosUsuarios.nombre}} {{ajaxDatosUsuarios.ape1}}</a></h1>
