Hecho:  - Si un maestro/esclavo tiene 0, que el 0 te lleve al create HECHO.  - En los modales, cuando hay un error, el enlace sigue siendo enlace y     te lleva a un view vacio, eso arreglado en todos, menos en producto,     que cuando pones un numero mal, la seleccion del modal ya no funciona,     mirar soluciones.
 - Manejo de fechas (el datepicker me sale en rojo, mirar bien la 
    validacion de errores. Me ha obligado a bajar una version de angular,
    buscar opciones que no me obliguen a eso o arreglar lo rojo).

Falta hacer:
 - Cuando se añade maximo de existencias de un producto al carrito, hacer
    algo.
 - Subir imagenes y mostrarlas.
 - Generar PDF de la factura a comprar.
 - Gestion de usuarios (admin, cliente, etc.).
 - Maestros/esclavos, num de usuarios que tiene un tipo, y num de
    productos que tiene un tipo.

--- a/src/main/webapp/js/app/factura/edit.html
+++ b/src/main/webapp/js/app/factura/edit.html
@@ -28,7 +28,7 @@
                ng-class="{ 'is-invalid' : userForm.fecha.$invalid && !userForm.fecha.$pristine, 'is-valid': userForm.fecha.$valid && !userForm.fecha.$pristine}">
                 </md-datepicker>
                 <div ng-show="userForm.fecha.$invalid && !userForm.fecha.$pristine && !userForm.fecha.$error.pattern" class="alert alert-danger" role="alert">
-                    Fecha no válida
+                    Fecha no valida
                 </div>
         </div>
 
