--- a/src/main/webapp/js/app/linea/create.html
+++ b/src/main/webapp/js/app/linea/create.html
@@ -46,7 +46,7 @@
                            size="5"
                            ng-model-options="{debounce: 1000}"
                            maxlength="5" ng-required="true"
-                           class="form-control is-valid" 
+                           class="form-control" 
                            ng-class="{ 'is-invalid' : userForm.obj_producto.$invalid && !userForm.obj_producto.$pristine }"
                     />
                     
