--- a/src/main/webapp/js/app/factura/plist.html
+++ b/src/main/webapp/js/app/factura/plist.html
@@ -101,7 +101,10 @@
                 <td>{{fila.iva}}</td>
                 <td><a href="usuario/view/{{fila.obj_Usuario.id}}">{{fila.obj_Usuario.nombre}} {{fila.obj_Usuario.ape1}} {{fila.obj_Usuario.ape2}}</a></td>             
                 <td>
-                    <a href="factura/plistlinea/{{fila.id}}/10/1" class="btn" ng-class="{'disabled': fila.numLinea == 0}">
+                    <a href="factura/plistlinea/{{fila.id}}/10/1" class="btn" ng-if="fila.numLinea >= 1">
+                        <i>{{fila.numLinea}}</i>
+                    </a>
+                    <a href="linea/create/{{fila.id}}" class="btn" ng-if="fila.numLinea == 0">
                         <i>{{fila.numLinea}}</i>
                     </a>
                 </td>
