--- a/src/main/webapp/js/app/producto/selection.html
+++ b/src/main/webapp/js/app/producto/selection.html
@@ -172,9 +172,7 @@
                         <td>{{fila.existencias}}</td>
                         <td>{{fila.precio}}</td>
                         <td>{{fila.foto}}</td>
-                        <td>
-                            <a href="tipoproducto/view/{{fila.obj_tipoProducto.id}}">{{fila.obj_tipoProducto.desc}}</a>
-                        </td>
+                        <td>{{fila.obj_tipoProducto.desc}}</td>
                         <td>
                             <div class="btn-toolbar" role="toolbar">
                                 <div class="btn-group">
