--- a/src/main/webapp/js/app/usuario/create.html
+++ b/src/main/webapp/js/app/usuario/create.html
@@ -61,7 +61,7 @@
                     Segundo apellido obligatorio
                 </div>
                 <div ng-show="userForm.ape2.$error.pattern" class="alert alert-danger" role="alert">
-                    Segundo apellido no vÃ¡lido
+                    Segundo apellido no valido
                 </div>
             </div>
         </div>
@@ -92,7 +92,7 @@
 
         <div class="form-group row">
             <label for="id_tipoUsuario" class="col-3 col-form-label">Tipo Usuario</label>
-            <div class="col-2">          
+            <div class="col-3">          
                 <div class="input-group">
                     <input ng-model="ajaxDatoUsuario.id"
                            ng-change="tipoUsuarioRefresh(this, true)"
@@ -112,7 +112,7 @@
                 </div>
             </div>
 
-            <div class="form-group " style="width: auto;" >
+            <div class="form-group " style="width: auto; margin-left: 15px;" ng-show="userForm.id_tipoUsuario.$valid">
                 <a href="tipousuario/view/{{ajaxDatoUsuario.id}}" class="input-group-text">
                     <span >Tipo de usuario: {{ajaxDatoUsuario.desc}}</span>
                 </a>
@@ -120,10 +120,10 @@
         </div>    
 
         <div class="row">
-            <label for="id_tipoUsuario" class="col-2 col-form-label"></label>
-            <div class="col-5">
+            <label for="id_tipoUsuario" class="col-3 col-form-label"></label>
+            <div class="col-8">
                 <div ng-show="!userForm.id_tipoUsuario.$valid && !userForm.id_tipoUsuario.$pristine" class="alert alert-danger" style="width: auto;" role="alert">
-                    El tipo de usuario es incorrecto.. {{userForm.id_tipoUsuario.$valid}}
+                    El tipo de usuario es incorrecto.
                 </div>
             </div>
         </div>
