--- a/src/main/webapp/js/app/usuario/edit.html
+++ b/src/main/webapp/js/app/usuario/edit.html
@@ -123,7 +123,7 @@
             </div>
 
 
-            <div class="form-group " style="width: auto;" >
+            <div class="form-group " style="width: auto;" ng-show="userForm.obj_tipousuario.$valid">
                 <a href="tipousuario/view/{{ajaxDatoUsuario.obj_tipoUsuario.id}}" class="input-group-text" ng-disabled="link">
                     <span >Tipo de usuario: {{ajaxDatoUsuario.obj_tipoUsuario.desc}}</span>
                 </a>
@@ -134,10 +134,10 @@
 
 
         <div class="row">
-            <label for="obj_tipousuario" class="col-2 col-form-label"></label>
-            <div class="col-5">
+            <label for="obj_tipousuario" class="col-3 col-form-label"></label>
+            <div class="col-8">
                 <div ng-show="!userForm.obj_tipousuario.$valid" class="alert alert-danger" style="width: auto;" role="alert">
-                    El tipo de usuario es incorrecto.. {{userForm.obj_tipousuario.$valid}}
+                    El tipo de usuario es incorrecto.
                 </div>
             </div>
         </div>
