--- a/src/main/webapp/js/app/usuario/selection.html
+++ b/src/main/webapp/js/app/usuario/selection.html
@@ -162,7 +162,7 @@
                         </th>
 
                         <th>
-                            Selección
+                            Seleccion
                         </th>
                     </tr>
                     <tr ng-repeat="fila in c.data track by $index">
@@ -172,9 +172,7 @@
                         <td>{{fila.ape1}}</td>
                         <td>{{fila.ape2}}</td>
                         <td>{{fila.login}}</td>
-                        <td>
-                            <a href="tipousuario/view/{{fila.obj_tipoUsuario.id}}">{{fila.obj_tipoUsuario.desc}}</a>
-                        </td>
+                        <td>{{fila.obj_tipoUsuario.desc}}</td>
                         <td>
                             <div class="btn-toolbar" role="toolbar">
                                 <div class="btn-group">
