Hecho:  - Cuando se añade maximo de existencias de un producto al carrito, hacer     algo (HECHO, el modal muestra un mensaje que le paso desde el     controlador, si hay mas existencias, muestra mensaje normal, si ha     agregado el total de las existencias, se comunica lo dicho).
 - Modificado el run (se hacia un carrito show cada vez que se cargaba
    la pagina aunque no estuviera loggeado).

Falta hacer:

 - Manejo de fechas (el datepicker me sale en rojo, mirar bien la 
    validacion de errores. Me ha obligado a bajar una version de angular,
    buscar opciones que no me obliguen a eso o arreglar lo rojo).

 - Subir imagenes y mostrarlas.
 - Generar PDF de la factura a comprar.
 - Gestion de usuarios (admin, cliente, etc.).
 - Maestros/esclavos, num de usuarios que tiene un tipo, y num de
    productos que tiene un tipo.

--- a/src/main/webapp/js/app/producto/plist_carrito.html
+++ b/src/main/webapp/js/app/producto/plist_carrito.html
@@ -54,7 +54,7 @@
             </div>
         </div>
     </div>
-    <carrito-selection class="modal fade" id="cadd-location-modal"></carrito-selection>
+    <carrito-selection class="modal fade" id="cadd-location-modal" msg="msgModal"></carrito-selection>
     <div class="row">
         <div class="col-9">
             <nav aria-label="paginacion">
