--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,6 +45,7 @@
         <script src="js/app/common/home.js" type="text/javascript"></script>
         
         <script src="js/app/carrito/plist.js" type="text/javascript"></script>
+        <script src="js/app/carrito/selection.js" type="text/javascript"></script>
         
         <script src="js/app/tipousuario/plist.js" type="text/javascript"></script>          
         <script src="js/app/tipousuario/view.js" type="text/javascript"></script>        
