Hecho:  - Manejo de fechas (el datepicker me sale en rojo, mirar bien la     validacion de errores. Me ha obligado a bajar una version de angular,     buscar opciones que no me obliguen a eso o arreglar lo rojo)(HECHO,     he quitao el ng-class y ya no me sale rojo, de momento me vale).
 - He quitado 1 coma al final de getValues y otra al final de getColumns
    en el bean de producto que sobraban.

Falta hacer:

 

 - Subir imagenes y mostrarlas.
 - Generar PDF de la factura a comprar.
 - Gestion de usuarios (admin, cliente, etc.).
 - Maestros/esclavos, num de usuarios que tiene un tipo, y num de
    productos que tiene un tipo.

--- a/src/main/webapp/js/app/factura/edit.html
+++ b/src/main/webapp/js/app/factura/edit.html
@@ -24,9 +24,7 @@
 
         <div class="form-group row">
             <label for="fecha" class="col-3 col-form-label">Fecha</label>
-            <md-datepicker ng-model="dt" id="fecha" name="fecha" md-placeholder="Fecha" ng-required="true"
-               ng-class="{ 'is-invalid' : userForm.fecha.$invalid && !userForm.fecha.$pristine, 'is-valid': userForm.fecha.$valid && !userForm.fecha.$pristine}">
-                </md-datepicker>
+            <md-datepicker ng-model="dt" id="fecha" name="fecha" md-placeholder="Fecha"></md-datepicker>
                 <div ng-show="userForm.fecha.$invalid && !userForm.fecha.$pristine && !userForm.fecha.$error.pattern" class="alert alert-danger" role="alert">
                     Fecha no valida
                 </div>
