--- a/src/main/webapp/js/app/linea/plist.html
+++ b/src/main/webapp/js/app/linea/plist.html
@@ -59,7 +59,7 @@
                     </button>
                 </th>
                 <th>
-                    Tipo Factura
+                    Factura
                     <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id_usuario', 'asc')">
                         <i class="fas fa-long-arrow-alt-up"></i>
                     </button>
