--- a/src/main/webapp/js/app/linea/view.html
+++ b/src/main/webapp/js/app/linea/view.html
@@ -26,8 +26,12 @@
             <td>{{ajaxDatoLinea.obj_Producto.desc}}</td>        
         </tr>
         <tr>
-            <th>Tipo Factura</th>
+            <th>Id producto</th>
             <td>{{ajaxDatoLinea.obj_Producto.id}}</td>
+        </tr>
+        <tr>
+            <th>Factura</th>
+            <td>{{ajaxDatoLinea.obj_Factura.id}}</td>
         </tr>
     </table>   
 </main>
