--- a/src/main/webapp/js/app/producto/plist_carrito.html
+++ b/src/main/webapp/js/app/producto/plist_carrito.html
@@ -41,7 +41,10 @@
     <div>
         <div class="productos">
             <div class="producto" ng-repeat="producto in ajaxDataProductos">
-                <div><i class="fas fa-cookie-bite" style="font-size: 200px;"></i></div>
+                <div>
+                    <img ng-src="images/{{producto.foto}}" style="width: 90%; border-radius: 10%;" alt="" ng-if="producto.foto != ''"/>
+                    <img ng-src="images/default.svg" style="width: 90%; border-radius: 10%;" alt="" ng-if="producto.foto == ''"/>
+                </div>
                 <div>{{producto.desc}}</div>
                 <div>Existencias: {{producto.existencias}}</div>
                 <div>Precio: {{producto.precio}}€</div>
