--- a/src/main/webapp/js/app/producto/plist_carrito.html
+++ b/src/main/webapp/js/app/producto/plist_carrito.html
@@ -47,7 +47,7 @@
                 </div>
                 <div>{{producto.desc}}</div>
                 <div>Existencias: {{producto.existencias}}</div>
-                <div>Precio: {{producto.precio}}â‚¬</div>
+                <div>Precio: {{producto.precio}}€</div>
                 <div>
                     <a class="btn comprar" ng-class="{'disabled': producto.existencias == 0}"  ng-click="add(producto.id)"  style="margin-left: 10px;" data-toggle="modal"
                        data-target="#cadd-location-modal">
