*** IMPORTANTE *** AUN NO HE EMPEZADO A HACER CODIGO GENERICO NI IMPLEMENTADO GESTION DE PERFILES. EL PUNTO DE PARTIDA ES ESTE.
Hecho:

 - Cambio de icono de descargar factura, y en la factura suprimo los
    espacios que puedan haber al principio o al final de cada cadena que
    tenga cada linea (No se veian las descripciones alineadas y era 
    porque algunas tenian espacios al principio).


Falta hacer:

 - Hacer codigo generico.
 - Gestion de usuarios (admin, cliente, etc.).
 - Maestros/esclavos, num de usuarios que tiene un tipo, y num de
    productos que tiene un tipo.

--- a/src/main/webapp/js/app/factura/plist.html
+++ b/src/main/webapp/js/app/factura/plist.html
@@ -117,7 +117,10 @@
                     </a> 
                     <a  href="{{ob}}/remove/{{fila.id}}" class="btn btn-danger accion"  id="borrar"> 
                         <i class="fa fa-trash-alt"></i>
-                    </a> 
+                    </a>
+                    <a ng-click="pdf(fila.id,fila.fecha, fila.iva)" class="btn btn-primary accion"  ng-class="{'disabled': {{fila.numLinea}} <= 0}">
+                              <i class="fas fa-file-download"></i>
+                    </a>
                 </td>                                  
             </tr>
         </table>
