--- a/src/main/webapp/js/app/usuario/plistfactura.html
+++ b/src/main/webapp/js/app/usuario/plistfactura.html
@@ -81,7 +81,7 @@
                             <i class="fa fa-trash-alt"></i>
                         </a> 
                         <a ng-click="pdf(fila.id,fila.fecha, fila.iva)" class="btn btn-primary accion"  ng-class="{'disabled': {{fila.numLinea}} <= 0}">
-                              <i class="fa fa-print" style="color:black"></i>
+                              <i class="fas fa-file-download"></i>
                         </a>
                     </td>                        
             </tr>
