*** IMPORTANTE *** CODIGO GENERICO (en servidor) HECHO Y FUNCIONANDO.
Falta hacer:
 - Gestion de usuarios (admin, cliente, etc.) tanto en cliente como en
    servidor.
 - Maestros/esclavos, num de usuarios que tiene un tipo, y num de
    productos que tiene un tipo.

--- a/src/main/webapp/js/app/usuario/plistfactura.html
+++ b/src/main/webapp/js/app/usuario/plistfactura.html
@@ -66,7 +66,10 @@
                 <td>{{fila.fecha| date:'d-M-y'}}</td>
                 <td>{{fila.iva}}</td>                                                
                 <td>
-                    <a href="factura/plistlinea/{{fila.id}}/10/1" class="btn" ng-class="{'disabled': fila.numLinea == 0}">
+                    <a href="factura/plistlinea/{{fila.id}}/10/1" class="btn" ng-if="fila.numLinea >= 1">
+                        <i>{{fila.numLinea}}</i>
+                    </a>
+                    <a href="linea/create/{{fila.id}}" class="btn" ng-if="fila.numLinea == 0">
                         <i>{{fila.numLinea}}</i>
                     </a>
                 </td>
